--- a/src/style.css
+++ b/src/style.css
@@ -257,11 +257,11 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
   background-position: top center;
   background-repeat: no-repeat;
   padding-bottom: 30px !important;
   padding-top: 30px !important;
+  background: #0000007d;
 }
 
 .home-content {
@@ -281,17 +281,25 @@ button:focus {
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: #ffb032;
+}
+
+.first-color {
+  color: #6a9ec0; /*3f8f80 */
+}
+
+.second-color {
+  color: #6d2ab9;
 }
 
 .Typewriter__wrapper {
-  font-size: 2.2em !important;
-  color: #be6adf !important;
+  font-size: 2.0em !important;
+  color: #568868 !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: #dcdcdc !important;
 }
 
 @media (max-width: 767px) {
@@ -314,18 +322,19 @@ button:focus {
   .myAvtar {
     padding-top: 2em !important;
     padding-bottom: 2em !important;
-  }
+  } 
 }
 
 .home-about-section {
   position: relative;
   padding-bottom: 70px !important;
   padding-top: 70px !important;
+  background: #21222381;
 }
 
 .home-about-description {
   color: white !important;
-  padding-top: 100px !important;
+  padding-top: 20px !important;
   padding-bottom: 20px !important;
   text-align: center;
 }
